--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "xsimpletest",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "bin": {
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "test": "node bin/x.js",
-    "test1": "node bin/x.js ut"
+    "test1": "node bin/x.js ut",
+    "help": "node bin/x.js --help"
   },
   "author": "",
   "license": "ISC",
