--- a/package.json
+++ b/package.json
@@ -1,19 +1,23 @@
 {
   "name": "xsimpletest",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
   "bin": {
-    "x": "bin/x.js"
+    "x": "babel-node  bin/x.js "
   },
   "scripts": {
-    "test": "node bin/x.js",
+    "test": "babel-node  bin/x.js ",
     "test1": "node bin/x.js ut",
     "help": "node bin/x.js --help"
   },
   "author": "yisbug@qq.com",
   "license": "MIT",
   "dependencies": {
+    "@babel/core": "^7.4.3",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.4.3",
+    "babel-core": "^6.26.3",
     "colors": "^1.3.3",
     "fs-extra": "^7.0.1"
   }
