--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "xsimpletest",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "",
   "main": "index.js",
   "bin": {
-    "x": "bin/x.js "
+    "x": "bin/x.js"
   },
   "scripts": {
     "test": "bin/x.js",
@@ -19,6 +19,7 @@
     "@babel/node": "^7.2.2",
     "@babel/polyfill": "^7.4.3",
     "@babel/preset-env": "^7.4.3",
+    "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.0",
     "colors": "^1.3.3",
     "fs-extra": "^7.0.1"
